# query-driven-AISdata-compressor

./: .gitignore  .yamllint  Makefile  README.md  main.py  pyproject.toml
AISDATA/: README.md
Range_QDS/: CODE_LAYOUT.md  Makefile  README.md  pyrightconfig.json
Range_QDS/artifacts/: README.md
Range_QDS/benchmarking/: README.md  __init__.py  artifacts.py  benchmark_final_grid.py  benchmark_inputs.py  benchmark_process.py  benchmark_profiles.py  benchmark_report.py  benchmark_row_runtime.py  benchmark_runner.py  benchmark_runtime.py  benchmark_table.py  child_process.py  common.py  final_grid.py  inputs.py  profiles.py  report.py  row_runtime.py  runner.py  runtime_benchmark.py  table.py
Range_QDS/config/: README.md  __init__.py  experiment_config.py  run_config.py
Range_QDS/data/: ais_loader.py  trajectory_cache.py
Range_QDS/data_preparation/: README.md  ais_loader.py  combine_days.py  trajectory_cache.py  trajectory_dataset.py  trajectory_index.py
Range_QDS/docs/: Agent-Task-Description.md  Next-Iterations.md  dev-tooling-guide.md  keep-in-mind.md  query-driven-implementation-progress.md  query-driven-implementation-research-guide.md  query-driven-rework-guide.md  query-driven-rework-progress.md
Range_QDS/evaluation/: README.md  baselines.py  evaluate_methods.py  metrics.py  query_cache.py  query_useful_v1.py  tables.py
Range_QDS/experiments/: README.md  benchmark_artifacts.py  benchmark_final_grid.py  benchmark_inputs.py  benchmark_process.py  benchmark_report.py  benchmark_row_runtime.py  benchmark_runner.py  benchmark_runtime.py  benchmark_table.py  causality.py  experiment_cli.py  experiment_data.py  experiment_methods.py  experiment_outputs.py  experiment_pipeline.py  experiment_workloads.py  gates.py  length_diagnostics.py  model_ablations.py  range_cache.py  range_diagnostics.py  run_ais_experiment.py  run_inference.py  segment_audits.py  selector_diagnostics.py  workload_cache.py
Range_QDS/learning/: README.md  checkpoint_selection.py  checkpoint_validation.py  checkpoints.py  factorized_head_diagnostics.py  factorized_prior_learning_diagnostics.py  factorized_prior_stage_diagnostics.py  factorized_prior_transfer_core.py  factorized_prior_transfer_diagnostics.py  factorized_target_diagnostics.py  fit_diagnostics.py  importance_labels.py  inference.py  losses.py  model_factory.py  model_features.py  model_setup.py  model_training.py  model_training_fit_diagnostics.py  model_training_helpers.py  model_training_historical_prior.py  model_training_loop.py  model_training_targets.py  model_training_validation.py  optimization_epoch.py  outputs.py  predictability_audit.py  query_prior_fields.py  scaler.py  segment_gradient_diagnostics.py  supervised_windows.py  teacher_distillation.py  trajectory_batching.py
Range_QDS/models/: README.md  historical_prior_qds_model.py  workload_blind_qds_model.py  workload_blind_range.py  workload_blind_range_v2.py
Range_QDS/orchestration/: README.md  causality.py  causality_marginal_paths.py  causality_prior_sensitivity.py  causality_score_sensitivity.py  causality_sensitivity.py  cli_utils.py  data_splits.py  evaluation_stage.py  experiment_cli.py  experiment_methods.py  experiment_outputs.py  experiment_pipeline.py  experiment_workloads.py  family_transfer_path_diagnostic.py  final_gate_summary.py  final_summary.py  gates.py  geojson_writers.py  learned_segment_freezing.py  learning_scoring_cli.py  learning_scoring_cli_selector_args.py  learning_scoring_pipeline.py  learning_target_stage.py  length_diagnostics.py  mlqds_method_factory.py  model_ablations.py  query_ship_local_heads_failure_diagnostic.py  query_ship_max_pool_transfer_diagnostic.py  range_cache.py  range_diagnostics.py  range_runtime_cache.py  retained_mask_ablation_stage.py  retained_mask_ablations.py  retained_mask_stage.py  retained_masks.py  run_ais_experiment.py  run_artifacts.py  run_exports.py  run_inference.py  (+26 more)
Range_QDS/queries/: README.md  coverage_estimator.py  query_executor.py  query_generator.py  range_geometry.py  workload.py  workload_diagnostics.py
Range_QDS/runtime/: README.md  __init__.py  torch_runtime.py
Range_QDS/scoring/: README.md  geometry_thresholds.py  method_scoring.py  methods.py  metrics.py  query_cache.py  query_local_utility.py  query_useful_v1.py  range_audit_scoring.py  range_query_metadata_summary.py  range_usefulness.py  score_tables.py
Range_QDS/scripts/: benchmark_preflight.sh  estimate_range_coverage.py  list_benchmark_runs.py  mark_benchmark_failed.py  monitor_system.sh  run_benchmark_queue_tmux.sh  run_range_benchmark_tmux.sh  summarize_run.py  validate_benchmark_queue_plan.py
Range_QDS/selection/: README.md  model_score_conversion.py  retained_mask_selectors.py  selector_types.py
Range_QDS/simplification/: README.md  learned_segment_budget.py  mlqds_scoring.py  simplify_trajectories.py
Range_QDS/tests/: conftest.py  test_beats_random_in_distribution.py  test_benchmark_queue_plan.py  test_benchmark_runner.py  test_experiment_data.py  test_f1_importance_labels.py  test_model_features.py  test_query_coverage_generation.py  test_query_driven_rework.py  test_range_geometry.py  test_range_workload_diagnostics.py  test_rework_guardrails.py  test_teacher_distillation.py  test_topk_no_positional_bias.py  test_torch_runtime_controls.py  test_training_does_not_collapse.py
Range_QDS/training/: README.md  checkpoint_selection.py  checkpoints.py  importance_labels.py  inference.py  model_features.py  predictability_audit.py  query_prior_fields.py  scaler.py  target_modes.py  teacher_distillation.py  train_model.py  training_diagnostics.py  training_epoch.py  training_losses.py  training_outputs.py  training_setup.py  training_targets.py  training_validation.py  training_windows.py  trajectory_batching.py
ais_pipeline/: README.md  pipeline.py
db/: import_ais_csv.py  smoke_test_db.py
(+202 files in other folders)
