[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p8-ais-qds"
version = "0.1.0"
description = "AIS cleaning and query-driven simplification research utilities."
requires-python = ">=3.14"
dependencies = [
    "numpy==2.4.5",
    "pandas==3.0.3",
    "psycopg[binary]==3.3.4",
    "pyarrow==24.0.0",
    "pyspark==4.1.1",
    "python-dotenv==1.2.2",
    "torch==2.12.0",
]

[dependency-groups]
dev = [
    "pyright==1.1.409",
    "pytest==9.0.3",
    "ruff==0.15.13",
    # Python bindings for jq. Install the jq CLI separately in WSL if shell jq is required.
    "jq==1.11.0",
    "hypothesis[numpy,pandas]==6.152.7",
    "pytest-regressions[dataframe,num]==2.10.0",
    "rich==15.0.0",
    "yamllint==1.38.0",
]

[tool.setuptools.packages.find]
where = [".", "Range_QDS"]
include = [
    "ais_pipeline*",
    "benchmarking*",
    "config*",
    "data*",
    "evaluation*",
    "models*",
    "orchestration*",
    "queries*",
    "runtime*",
    "simplification*",
    "training*",
]

[tool.pytest.ini_options]
testpaths = ["Range_QDS/tests"]
pythonpath = [".", "Range_QDS"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
]
xfail_strict = true
markers = [
    "integration: tests that require external services, databases, or large local artifacts",
    "property: property-based tests using hypothesis",
    "regression: stable schema/report snapshot tests",
    "slow: tests that are intentionally slow",
    "spark: tests that require Spark",
]

[tool.pyright]
include = [".", "Range_QDS"]
exclude = [
    "**/.git",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/.venv",
    "**/__pycache__",
    "**/AISDATA",
    "**/artifacts",
    "**/build",
    "**/dist",
    "**/spark_temp",
    "**/node_modules",
    "**/.*",
]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"

[tool.ruff]
line-length = 100
target-version = "py314"
src = [".", "Range_QDS"]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "**/__pycache__",
    "AISDATA",
    "artifacts",
    "build",
    "dist",
    "spark_temp",
    "**/node_modules",
    "**/.*",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "PT",
    "RUF",
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = [
    "ais_pipeline",
    "benchmarking",
    "config",
    "data",
    "evaluation",
    "models",
    "orchestration",
    "queries",
    "runtime",
    "simplification",
    "training",
]

[tool.ruff.format]
docstring-code-format = true
