[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p8-ais-qds"
version = "0.1.0"
description = "AIS cleaning and query-driven simplification research utilities."
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6,<3",
    "pandas>=3.0.3,<4",
    "psycopg[binary]>=3.3.4,<4",
    "pyarrow>=24.0.0,<25",
    "pyspark>=4.1.2,<5",
    "python-dotenv>=1.2.2,<2",
    "torch>=2.12.0,<3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409,<2",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.14,<0.16",
    # Python bindings for jq. Install the jq CLI separately in WSL if shell jq is required.
    "jq>=1.11.0,<2",
    "hypothesis[numpy,pandas]>=6.152.9,<7",
    "pytest-regressions[dataframe,num]>=2.10.0,<3",
    "rich>=15.0.0,<16",
    "yamllint>=1.38.0,<2",
]

[tool.setuptools.packages.find]
where = [".", "Range_QDS"]
include = [
    "ais_pipeline*",
    "benchmarking*",
    "config*",
    "data_preparation*",
    "learning*",
    "models*",
    "orchestration*",
    "runtime*",
    "scoring*",
    "scripts*",
    "selection*",
    "workloads*",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["Range_QDS/tests"]
pythonpath = [".", "Range_QDS"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
]
xfail_strict = true
markers = [
    "integration: tests that require external services, databases, or large local artifacts",
    "property: property-based tests using hypothesis",
    "regression: stable schema/report snapshot tests",
    "slow: tests that are intentionally slow",
    "spark: tests that require Spark",
]
filterwarnings = [
    "error::ResourceWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
    "ignore:The PyTorch API of nested tensors is in prototype stage.*:UserWarning",
]

[tool.pyright]
include = ["Range_QDS", "ais_pipeline", "db", "main.py"]
exclude = [
    "**/.git",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/.venv",
    "**/__pycache__",
    "**/AISDATA",
    "**/artifacts",
    "**/build",
    "**/dist",
    "**/spark_temp",
    "**/node_modules",
    "**/.*",
]
extraPaths = [".", "Range_QDS"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"

[tool.ruff]
line-length = 100
target-version = "py314"
src = [".", "Range_QDS"]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "**/__pycache__",
    "AISDATA",
    "Range_QDS/artifacts",
    "build",
    "dist",
    "spark_temp",
    "**/node_modules",
    "**/.*",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "C4",
    "DTZ",
    "NPY",
    "PD",
    "PERF",
    "PIE",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = [
    "ais_pipeline",
    "benchmarking",
    "config",
    "data_preparation",
    "learning",
    "models",
    "orchestration",
    "runtime",
    "scoring",
    "scripts",
    "selection",
    "workloads",
]

[tool.ruff.format]
docstring-code-format = true
